--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -31,53 +31,54 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo má
 ![[strings-property3.png]]
 
 >[!info] Potencia de un Alfabeto
-> - Si **Σ** es un alfabeto, **Σk** es el conjunto de las cadenas de longitud k, tales que cada uno de los símbolos de las mismas pertenece a **Σ**.
-> - El conjunto de todas las palabras que se pueden formar con los símbolos de un alfabeto **Σ** se llama ***universo del discurso o lenguaje universal*** de **Σ** y se representa con Σ*.
+> - Si $Σ$ es un alfabeto, $Σ^k$ es el conjunto de las cadenas de longitud $k$, tales que cada uno de los símbolos de las mismas pertenece a $Σ$.
+> - El conjunto de todas las palabras que se pueden formar con los símbolos de un alfabeto $Σ$ se llama ***universo del discurso o lenguaje universal*** de $Σ$ y se representa con $Σ^*$.
 >
-> Para poder ver esto de forma más práctica digamos que contamos con el siguiente alfabeto Σ = {0,1}; entonces Σ0 = {𝝀} o un conjunto vacío, Σ1 = {0,1}; Σ2 = {00,01,10,11} y Σ3 = {000,001,010,011,100,101,110,111} y así sucesivamente
+> Para poder ver esto de forma más práctica digamos que contamos con el siguiente alfabeto $Σ$ = {0,1}; entonces $Σ^0$ = {𝝀} o un conjunto vacío, $Σ^1$ = {0,1}; $Σ^2$ = {00,01,10,11} y $Σ^3$ = {000,001,010,011,100,101,110,111} y así sucesivamente
 
 >[!info] Lenguajes Definición Conceptual
-> - Se llama ***Lenguaje L*** definido sobre el alfabeto **Σ** a cualquier subconjunto de **Σ*.**
+> - Se llama ***Lenguaje $L$*** definido sobre el alfabeto $Σ$ a cualquier subconjunto de $Σ^*$.
 > -  Especificación:
-> 	- *Por comprensión* -> L = { w ϵ Σ* / w cumple la propiedad P} es decir que dicho lenguaje cumple una determinada propiedad que lo define.
-> 	- *Por extensíon* -> Se enumeran todos sus componentes.
+> 	- *Por comprensión* -> $L = \{ w \in Σ* / \text{w cumple la propiedad P}\}$ es decir que dicho lenguaje cumple una determinada propiedad que lo define.
+> 	- *Por extensión* -> Se enumeran todos sus componentes.
 > 
 
 ##### Operaciones sobre lenguajes
 
-- **Concatenación** -> Sean dos lenguajes L1 L2 , ⊂ Σ* -> L1 * L2 = { x * y / x ∈ L1 ∧ y ∈ L2 }
+- **Concatenación** -> Sean dos lenguajes $L_1, L_2 \subset Σ^*$ -> $L_1 * L_2 = \{ x * y / x \in L_1 ∧ y \in L_2 \}$
 
  ![[lenguage-property1 2.png]]
 
-- **Unión** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 ∪ L2 = { x / x ∈ L1 ∨ x ∈ L2 }
+- **Unión** -> Sean dos lenguajes $L1, L2 ⊂ Σ^*$ -> $L_1 ∪ L_2 = \{ x / x \in L_1 ∨ x \in L_2 \}$
 
  ![[lenguage-property2.png]]
 
-- **Intersección** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 ∩ L2 = { x / x ∈ L1 ∧ x ∈ L2 }
+- **Intersección** -> Sean dos lenguajes $L_1, L_2 \subset Σ^*$ -> $L1 ∩ L2 = \{ x / x \in L_1 ∧ x \in L_2 \}$
 
  ![[lenguage-property3.png]]
 
-- **Diferencia** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 - L2 = { x / x ∈ L1 ∧ x  ∉ L2 }
+- **Diferencia** -> Sean dos lenguajes $L_1, L_2 \subset Σ^*$ -> $L_1 - L_2 = \{ x / x \in L_1 ∧ x  \notin L2 \}$
 
 ![[lenguaje-property4.png]]
 
-- **Complementación** -> Se denomina complemento de L, al lenguaje que contiene todas las palabras sobre el alfabeto Σ y que no pertenecen a L. -L = { x / x ∈ Σ* ∧ x  ∉ L }
+- **Complementación** -> Se denomina complemento de $L$, al lenguaje que contiene todas las palabras sobre el alfabeto $Σ$ y que no pertenecen a $L$. $\overline{L} = { x / x \in Σ^* ∧ x  \notin L }$
+ 
  ![[lenguaje-property5.png]]
 
-- **Lenguaje Reflejo** -> Sea L un lenguaje, entonces Lr = { x / x ∈ L }
-- **Potencia** -> Se denomina ***potencia i-énecima*** de un lenguaje L a la operación que consiste en concatenar consigo mismo ***i*** veces. Li = L0 x L1 x  L2 ... x Li
+- **Lenguaje Reflejo** -> Sea $L$ un lenguaje, entonces $L_r = \{ x / x \in L\}$
+- **Potencia** -> Se denomina ***potencia i-enésima*** de un lenguaje $L$ a la operación que consiste en concatenar consigo mismo ***i*** veces. $L_i = L_0 * L_1 * L_2 ... * L_i$
 - **Clausura o Cierre positivo** -> son las infinitas concatenaciones de las potencias de los lenguajes empezando desde ***i = 1***.
-- **Clausura, Cierre o Cerradura Kleene** -> son las infinitas concatenaciones de las potencias de los lenguajes empezando desde ***i = 0***, o sea que incluye al conjunto vacío y al conjunto L (lenguaje) y a L* (que son todas las posibles combinaciones de palabras surgidas de la concatenación de potencias).
+- **Clausura, Cierre o Cerradura Kleene** -> son las infinitas concatenaciones de las potencias de loslenguajes, empezando desde ***i = 0***, o sea que incluye al conjunto vacío y al conjunto $L$ (lenguaje) y a $L^*$ (que son todas las posibles combinaciones de palabras surgidas de la concatenación de potencias).
 
 ---
 
 ## Gramática
 
-La gramática es un conjunto de reglas y estructuras que debe seguir un determinado lenguaje para que las sentencias que se escriban con él sean válidas. Cuando hablamos de la construcción de lenguajes de programación a nivel de diseño primero se piensa en la gramática de este mismo y luego se comienza a trabajar en el lenguaje como tal; por eso se dice que la ***gramatica es aquello que genera el lenguaje*** en sí mismo.
+La gramática es un conjunto de reglas y estructuras que debe seguir un determinado lenguaje para que las sentencias que se escriban con él sean válidas. Cuando hablamos de la construcción de lenguajes de programación a nivel de diseño primero se piensa en la gramática de este mismo y luego se comienza a trabajar en el lenguaje como tal; por eso se dice que la **gramática es aquello que genera el lenguaje*** en sí mismo.
 
 ---
 
 ## Máquina
 
-Las máquinas pueden ser pensadas como Autómatas, es decir, un sistema que interactúa con el ambiente, que puede recibir entradas procesar dichas entradas, toma diferentes estados y puede o no producir una salida. Se dice a su vez que tiene una equivalencia con la gramática, esto es así porque si una sentencia que nosotros escribimos en un lenguaje de programación gramaticalmente está bien escrita entonces la máquina (computadora) va a realizar dichos procedimientos sin cometer ningún error, pero en caso de que haya algún problema con la sintaxis la máquina no responderá satisfactoriamente.
+Las máquinas pueden ser pensadas como Autómatas, es decir, un sistema que interactúa con el ambiente, que puede recibir entradas, procesar dichas entradas, toma diferentes estados y puede o no producir una salida. Se dice a su vez que tiene una equivalencia con la gramática, esto es así porque si una sentencia que nosotros escribimos en un lenguaje de programación gramaticalmente está bien escrita, entonces la máquina (computadora) va a realizar dichos procedimientos sin cometer ningún error, pero en caso de que haya algún problema con la sintaxis la máquina no responderá satisfactoriamente.
 
