Correccion de algunas cosas de Estadística

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -1,10 +1,10 @@
 
-Los estados son el único medio que disponen los AF para recordar los eventos que ocurren. Estos automatas se pueden dividir en:
+Los estados son el único medio que disponen los Autómatas Finitos para recordar los eventos que ocurren. Estos autómatas se pueden dividir en:
 
 1. Autómatas Finitos Deterministas (AFD).
 2. Autómatas Finitos No Deterministas (AFN).
 
-Estos automatas pueden ser representados mediante el ***modelo de sistemas discretos***, con este modelo se trata de representar la realidad continua de forma sencilla, para que estos modelos cumplan correctamente su función deben tenerse en cuenta que modelo o situación se está representando y si lo hace correctamente.
+Estos autómatas pueden ser representados mediante el ***modelo de sistemas discretos***, con este modelo se trata de representar la realidad continua de forma sencilla, para que estos modelos cumplan correctamente su función deben tenerse en cuenta que modelo o situación se está representando y si lo hace correctamente.
 En los modelos de sistemas discretos, los estados y las transiciones deben estar bien distinguidos. 
 
 >[!note] Nota
@@ -27,23 +27,23 @@ Características:
 >[!info] Dato
 >Este tipo de autómatas son reconocedores de lenguajes.
 
-A su vez, estos automatas pueden ser representados como una quíntupla ***A = (Q, Σ, δ, q0, F)*** en donde:
+A su vez, estos autómatas pueden ser representados como una quíntupla $A = (Q, Σ, δ, q_0, F)$ en donde:
 
-- ***Q*** es un conjunto finito no vacío de estados.
-- ***Σ*** es el conjunto finito de símbolos de entrada.
-- ***δ: Q x Σ -> Q*** es la función de transición.
-- ***q0 ∈ Q*** es el estado inicial.
-- ***F ⊆ Q*** es el conjunto de estados finales.
+- $Q$ es un conjunto finito no vacío de estados.
+- $Σ$ es el conjunto finito de símbolos de entrada.
+- $δ: Q x Σ$ -> $Q$ es la función de transición.
+- $q_0 ∈ Q$ es el estado inicial.
+- $F ⊆ Q$ es el conjunto de estados finales.
 
 #### Representación de AFD
 
 Estos se pueden representar de dos maneras, mediante un diagrama de transiciones (grafo) o una tabla de transiciones (matriz), cualquiera de los dos son prácticas, a continuación un ejemplo de ambas representaciones:
 
-<span class="centerImg"> ![[ALF-AFD.png]] </span>
+![[ALF-AFD.png]]
 
 Con el fin de mostrar un ejemplo más amplio que muestre todos los componentes de este tipo de autómatas, le ponemos una imagen más representativa.
 
-<span class="centerImg"> ![[ALF-AFD2.png]] </span>
+![[ALF-AFD2.png]]
 
 #### Diseño de AFD
 
@@ -57,13 +57,13 @@ Para facilitar esta parte existen dos métodos de diseño
 
 1. **Por Conjuntos de Estados** -> En este método asociamos condiciones a grupos de estados, con lo que logramos aumentar el grado de abstracción. Por Ej.:
 
-<span class="centerImg"> ![[ALF-diseño-conjunto-estados.png]] </span>
+![[ALF-diseño-conjunto-estados.png]]
 
 >Como podemos ver, primero se crean grupos abstractos que representan una situación particular y luego se intenta representar esos grupos mediante estados y transiciones que favorezcan esa representación.
 
 2. **Por Complemento** -> Al igual que el modelo anterior, se asocia las condiciones que una determinada cadena a grupos, con la particularidad que luego los estados que representan la situación son invertidos. Véase el ejemplo:
 
-<span class="centerImg"> ![[ALF-diseño-complemento.png]] </span>
+![[ALF-diseño-complemento.png]]
 
 ## Reconocimiento de Palabras
 
@@ -77,14 +77,14 @@ Como ya hemos nombrado anteriormente, estos autómatas en particular son reconoc
 
 A partir de la función de transición de un AFD compuesta de la siguiente manera -> ***𝛿(𝑞, 𝑎)/𝑎 ∈ ∑***. Se puede definir otra función denominada función de transición extendida, la cual se puede definir formalmente de forma recursiva:
 
-<span class="centerImg"> ![[ALF-definicion-recursiva.png]] </span>
+![[ALF-definicion-recursiva.png]]
 
 >[!important] Sobre la Función de Transición Extendida
 >La extensión de la función de transición se refiere a la posibilidad de extender esta función de transición a cadenas de símbolos del alfabeto de entrada, de tal forma que se pueda obtener el estado final en el que debería estar el autómata después de haber procesado completamente dicha cadena. Esta función extendida se llama ***función de transición extendida o función de transición de cadena*** (o sobre palabras).
 
-Mediante esta dado un determinado automata podemos demostrar que una palabra es admitida, es válida para ese lenguaje o no, veremos en el siguiente ejemplo si el siguiente autómata acepta la palabra *x=110101*.
+Mediante esta dado un determinado autómata podemos demostrar que una palabra es admitida, es válida para ese lenguaje o no, veremos en el siguiente ejemplo si el siguiente autómata acepta la palabra *x=110101*.
 
-<span class="centerImg">![[ALF-demostracion-formal.png]]  </span>
+![[ALF-demostracion-formal.png]]
 
 - Un AFD rechaza una palabra si ***x <-> 𝛿(q, x) ∉ F***.
 - Un AFD reconoce o acepta una palabra si ***x <-> 𝛿(q, x) ∈ F*** , es decir, Se consumen todos los símbolos de entrada y al terminar la palabra, se llega a un estado final.
@@ -96,7 +96,7 @@ Dado dos autómatas $A_1$ y $A_2$, para comprobar si estos autómatas son equiva
 >[!important] Teorema de Moore
 > Dos estados q y q´ son ***compatibles*** si ambos son finales o ninguno de los dos lo es. Si uno es final y el otro no, entonces se dice que son ***incompatibles***.
 
-Entonces, dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0´, F´)***
+Entonces, dados dos autómatas $A=(Q, Σ, δ, q_0 , F)$ y $A´=(Q´, Σ´, δ´, q_0´, F´)$
 1. Inicialmente la raíz del árbol es (q0 , q0´).
 2. Si en el árbol hay un par (r, r´), para cada carácter en Σ se añaden como hijos suyos los pares ***(rσ ,rσ´)*** donde ***rσ = δ(r, σ), rσ´= δ(r´, σ)***, si no existen.
 3. Si aparece en el árbol un par (r, r´) de estados incompatibles, se interrumpe la construcción del mismo, concluyendo que los autómatas no son equivalentes. En caso contrario se continúan a partir del paso 2.
@@ -104,7 +104,7 @@ Entonces, dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0
 
 #### Minimización de AFD
 
-Los algoritmos que simulan o implementan automatas finitos deterministas suelen requerir un espacio más o menos proporcional al número de estados del autómata, por lo que interesa que el número de dichos estados sea el menor posible. En un autómata puede haber dos tipos de estados *innecesarios*, que es posible eliminar o combinar para minimizar el número de estados. Por esta razón, existen dos operaciones de minimización diferentes:
+Los algoritmos que simulan o implementan autómatas finitos deterministas suelen requerir un espacio más o menos proporcional al número de estados del autómata, por lo que interesa que el número de dichos estados sea el menor posible. En un autómata puede haber dos tipos de estados *innecesarios*, que es posible eliminar o combinar para minimizar el número de estados. Por esta razón, existen dos operaciones de minimización diferentes:
 
 - ***Eliminación de estados inaccesibles***: Un estado es inaccesible si no se puede alcanzar desde el estado inicial del AFD siguiendo cualquier combinación de transiciones de entrada. Estos estados no son necesarios para el funcionamiento del AFD y pueden ser eliminados sin afectar su comportamiento.
 - ***Agrupación de estados equivalentes o indistinguibles***: Dos estados son equivalentes si tienen el mismo comportamiento desde la perspectiva de cualquier cadena de entrada. Es decir, si tienen las mismas transiciones de entrada y salida y llegan a estados finales o no finales de manera similar. La agrupación de estados equivalentes en un único estado reduce el número total de estados del AFD.
@@ -114,12 +114,12 @@ Existen dos métodos de simplificación:
 
 1. **Tabla de estados distinguibles**
 	- Dados los estados ***p y q***, ambos son ***distinguibles*** si son ***incompatibles***, es decir, sus transiciones no los llevan a los mismos estados.
-	- Si ***δ(p0 , σ)=p y δ(q0 , σ)=q*** donde p y q son distinguibles, entonces $p_0$ y $q_0$ son distinguibles.
+	- Si $δ(p_0 , σ)=p$ y $δ(q_0 , σ)=q$ donde p y q son distinguibles, entonces $p_0$ y $q_0$ son distinguibles.
 	- Forma de realizarlo:
 		1. Construir una tabla donde las filas y las columnas son los nombres de los estados.
 		2. Marcar con una x cuando los estados sean distinguibles.
 		3. Los estados equivalentes (no marcados) podrán eliminarse.
-1. **Clases de equivalencia**
+2. **Clases de equivalencia**
 	- Forma de realizarlo:
 		1. Inicialmente, se tienen las clases conformadas por los estados finales y los que no lo son.
 		2. Luego sea ***q*** un estado de una de las clases. Para cada uno de los otros estados, ***q´***, verificar si ***δ(q, σ)*** va a dar la misma clase de equivalencia que ***δ(q´, σ)***, para cada carácter σ. Esto quiere decir que para cada estado que se encuentra dentro de esa clase, todas las transiciones de estos van a llevar a la misma clase como resultado de la transición
@@ -133,15 +133,15 @@ Existen dos métodos de simplificación:
 
 # Autómatas Finitos no Deterministas
 
-Se los define como una quíntupla ***A = (Q, Σ, δ, q0 , F)***, en donde:
+Se los define como una quíntupla $A = (Q, Σ, δ, q_0 , F)$, en donde:
 
-- **Q** es un conjunto finito no vacío de estados.
-- **Σ** es el conjunto finito de símbolos de entrada. 
-- **δ: Q x (Σ U {ε}) -> P(Q)** es la función de transición.
-- **q0** ∈ Q el estado inicial.
-- **F** ⊂ Q es el conjunto de estados finales
+- $Q$ es un conjunto finito no vacío de estados.
+- $Σ$ es el conjunto finito de símbolos de entrada. 
+- $δ: Q x (Σ \cup {ε})$ -> $P(Q)$ es la función de transición.
+- $q_0 ∈ Q$ el estado inicial.
+- $F ⊂ Q$ es el conjunto de estados finales
 
-Al igual que los autómatas finitos deterministas, los no deterministas se pueden representar a través de grafos o de tablas de estados. A diferencias de los deterministas, los automatas finitos no deterministas poseen una particularidad que es la ***relación lambda***.
+Al igual que los autómatas finitos deterministas, los no deterministas se pueden representar a través de grafos o de tablas de estados. A diferencias de los deterministas, los autómatas finitos no deterministas poseen una particularidad que es la ***relación lambda***.
 
 >[!important] Relación Lambda
 >Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si en la transición a otro estado no se consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
@@ -179,16 +179,16 @@ Informalmente, un AFN es una extensión de un AFD que permiten ciertas transicio
 - A partir de un estado concreto, y ante un símbolo de entrada, se permite que el autómata transite a más de un estado distinto.
 - No es obligatorio consumir un símbolo de entrada para que el autómata cambie estado.
 
-Para todo AFN N, existe un AFD D tal que L(N) = L(D).
+Para todo AFN $N$, existe un AFD $D$ tal que $L(N) = L(D)$.
 - Se puede construir un AFD equivalente a un AFN dado. Utilizando el método que se basa en considerar el ***conjunto de estados*** en los que podría encontrarse el AFN al haber consumido una cierta entrada.
 
-<span class="centerImg"> ![[ALF-equivalencia1.png]] </span>
+![[ALF-equivalencia1.png]]
 
-Se hace algo parecido al teorema de Moore para demostrar que dos automatas son equivalentes. Con la diferencia que en este caso se van construyendo nuevos grupos de estados y se para una vez que no se forme ningún grupo nuevo. 
+Se hace algo parecido al teorema de Moore para demostrar que dos autómatas son equivalentes. Con la diferencia que en este caso se van construyendo nuevos grupos de estados y se para una vez que no se forme ningún grupo nuevo. 
 Los estados van a ser finales, si en el conjunto de estados hay al menos un estado final.
 
 - Se puede construir un AFN equivalente a un AFD dado. Utilizando las transiciones ε.
 
-<span class="centerImg"> ![[ALF-equivalencia2.png]] </span>
+![[ALF-equivalencia2.png]]
 
 Se diseña un AFD para cada palabra que se quiera aceptar. Se combinan todos los AFD en un AFN que reconozca el lenguaje completo, donde los antiguos estados iniciales dejan de serlo, se crea un nuevo estado inicial, se añaden transiciones ***ε*** desde el nuevo estado inicial a los antiguos estados iniciales.
