--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
@@ -81,7 +81,7 @@ Un lenguaje es regular si y sólo si es aceptado por algún autómata finito.
 
 ## Lema o Teorema del Bombeo
 
-Si $L$ es un lenguaje regular (infinito). Entonces existe una constante $n$ (que depende de L), tal que para cadena $w$ ϵ $L$, con |$w$| ≥ $n$, donde se puede dividir a $w$ en tres cadenas, tal que, $w=xyz$, de modo que:
+Si $L$ es un lenguaje regular (infinito). Entonces existe una constante $n$ (que depende de $L$), tal que para cadena $w$ ϵ $L$, con |$w$| ≥ $n$, donde se puede dividir a $w$ en tres cadenas, tal que, $w=xyz$, de modo que:
 
 1. $y \neq \varepsilon$
 2. $|xy| \leq n$
