Se agrego unas cosas de la clase virtual y se acomodo unas cosas de otros resumenes

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
@@ -1,4 +1,4 @@
-Se definen como una séptupla, $A = (Q,Σ,Γ,δ,q_0,A_0, F)$, en donde:
+Los autómatas a pila se definen como una séptupla, $A = (Q,Σ,Γ,δ,q_0,A_0, F)$, en donde:
 
 - $Q$ es un conjunto finito no vacío de estados.
 - $Σ$ es el alfabeto de símbolos de entrada.
