--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
@@ -93,4 +93,4 @@ Una Máquina de Turing reconoce un lenguaje $L$ si para cualquier cadena de entr
 - Máquina de Turing no deterministas.
 
 >[!important] Autómatas Lineales Acotados
->Un autómata linealmente acotado es una máquina de Turing no determinista que posee cinta finita, acotada tanto por la izquierda como por la derecha. Este tipo de autómatas reconoce lenguajes dependientes del contexto, es decir, aquellos descritos por las gramáticas de tipo 1 en la jerarquía de Chomsky.
+>Un autómata linealmente acotado es una máquina de Turing no determinista que posee cinta finita, acotada tanto por la izquierda como por la derecha. Este tipo de autómatas reconoce lenguajes dependientes del contexto, es decir, aquellos descritos por las gramáticas de tipo 1 en la jerarquía de Chomsky. ^automatas-lineales-acotados
