--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
@@ -21,11 +21,12 @@ Un ***compilador*** es un programa que traduce un *programa fuente*, escrito en 
 
 ![[ALF-estructura-compilador.png]]
 
-- **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada y va agrupando a las cadenas en componentes léxicos (token/lexema). Esta etapa se suele realizar por medio de un ***autómata finito***, ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
-- **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una salida (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un ***autómata a pila***, debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
-- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. La semántica de los lenguajes de programación se pueden definir de dos formas.
-	- La *semántica estática* que se ocupa de las condiciones que debe cumplir las construcciones de un programa para que su significado sea correcto.
-	- La *semántica dinámica* que se ocupa del significado de una construcción con objeto de que puede ser traducido a código ejecutable.
+- **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
+- **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una salida (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
+- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing | Máquina de Turing]].
+	- La semántica de los lenguajes de programación se pueden definir de dos formas.
+		- La *semántica estática* que se ocupa de las condiciones que debe cumplir las construcciones de un programa para que su significado sea correcto.
+		- La *semántica dinámica* que se ocupa del significado de una construcción con objeto de que puede ser traducido a código ejecutable.
 
 >[!important] Gramáticas Atribuidas o de Atributos
 >Es un tipo particular de gramática que se utiliza para ampliar a las gramáticas independientes del contexto que describen a los lenguajes de programación, con la gramática de atributos lo que hacemos es asociar una serie de atributos a los símbolos de la gramática y una serie de funciones semánticas a las reglas de producciones de esta misma.
@@ -45,15 +46,15 @@ Un ***compilador*** es un programa que traduce un *programa fuente*, escrito en 
 
 >[!example] Información Adicional
 >###### La Tabla de Símbolos
->No es mas que una estructura de datos que contiene un registro o entrada por cada identificador que se encuentre en el código fuente, la principal función de esta tabla es almacenar los identificadores y los distintos atributos relacionados a estos.
+>No es más que una estructura de datos que contiene un registro o entrada por cada identificador que se encuentre en el código fuente, la principal función de esta tabla es almacenar los identificadores y los distintos atributos relacionados con estos.
 >
 >###### Detección e información de Errores
->En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general en la etapa del análisis sintáctico y semántico es donde más se concentran los errores detectados por los compiladores.
->La mayoría de los compiladores son dirigidos por sintaxis, es decir, el proceso de traducción es dirigido por el analizador sintáctico, en el cual se comienza a generar la estructura del programa fuente a través de los tokens y se proporciona el significado del programa basándose en la estructura de árbol de análisis sintáctico.
->Típicamente los compiladores realizan una pasada para realizar el análisis léxico y sintáctico, otra para el análisis semántico y la optimización, y una ultima pasada para generar el código objeto.
+>En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general, en la etapa del análisis léxico y sintáctico es donde más se concentran los errores detectados por los compiladores.
+>Por esta razón se dice que la mayoría de los compiladores son dirigidos por sintaxis, es decir, el proceso de traducción es dirigido por el analizador léxico y sintáctico, en el cual se comienza a generar la estructura del programa fuente a través de los tokens y se proporciona el significado del programa basándose en la estructura de árbol de análisis sintáctico.
+>Típicamente los compiladores realizan una pasada para realizar el análisis léxico y sintáctico, otra para el análisis semántico y la optimización, y una última pasada para generar el código objeto.
 
 ## Intérpretes
 
-Un ***intérprete*** hace que un programa fuente escrito en un lenguaje de alto nivel, vaya sentencia por sentencia traduciéndose y ejecutándose directamente por la computadora
+Un ***intérprete*** hace que un programa fuente, escrito en un lenguaje de alto nivel, vaya sentencia por sentencia, traduciéndose y ejecutándose directamente por la computadora
 
 ![[ALF-Interpretes.png]]
