Se agrego las cosas del libre de compiladores al resumen

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
@@ -77,7 +77,7 @@ Para simplificar, cada configuración $(v, q, w)$ se representará mediante la c
 >Un ***movimiento*** es el paso, mediante una transición, de una configuración de análisis a otra. Se representa con el símbolo ├. Por ejemplo $000q_011 ├ \  0000q_01$.
 >Para representar que se puede pasar de la configuración $(v_1,q_1,w_1)$ a la configuración $(v_2,q_2,w_2)$, se representaría de la siguiente manera $(v_1,q_1,w_1) ├* \  (v_2,q_2,w_2)$, o en un ejemplo más significativo tenemos la siguiente sucesión $q_010011 ├* \  00000q_1$, donde se pasa de la entrada inicial que recibe la *MT* a su resultado final.
 
-## Palabras Aceptadas por una Máquina de Turing
+### Palabras Aceptadas por una Máquina de Turing
 
 Una Máquina de Turing reconoce un lenguaje $L$ si para cualquier cadena de entrada de su cinta, $w$, se detiene y lo hace en un estado final si y solo si $w \  ϵ \ L$. Los lenguajes aceptados por una Máquina de Turing se denominan ***Lenguajes Recursivamente Enumerables***, este tipo de lenguajes son generados por las gramáticas de tipo 0 en la jerarquía de Chomsky.
 
