--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
@@ -19,11 +19,14 @@ Un ***compilador*** es un programa que traduce un *programa fuente*, escrito en 
 
 #### Estructura de un Compilador
 
+Los compiladores constan de dos procesos o etapas principales: *la etapa de análisis y la etapa de síntesis*. La parte del análisis divide el programa fuente en componentes e impone una estructura gramatical sobre ellas. Después utiliza esta estructura para crear una representación intermedia del programa fuente. Si la parte del análisis detecta que el programa fuente está mal formado en cuanto a la sintaxis, o que no tiene una semántica inconsistente, entonces debe proporcionar mensajes de error para que el usuario pueda corregirlo. La parte del análisis también recolecta información sobre el programa fuente y la almacena en una estructura de datos llamada **tabla de símbolos**, esta estructura es rellenada y utiliza en todas las fases del compilador.
+La parte de la síntesis construye el programa objeto deseado a partir de la representación intermedia y de la información en la tabla de símbolos.
+
 ![[ALF-estructura-compilador.png]]
 
-- **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
-- **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una salida (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
-- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing | Máquina de Turing]].
+- **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada que constituyen nuestro programa fuente y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
+- **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una representación intermedia (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
+- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. Una parte importante del análisis semántico es la verificación de tipos, en donde el compilador verifica que cada operador tenga operandos que coincidan, al mismo tiempo que guarda la información de los tipos en la tabla de símbolos, en caso de que no coincidan el compilador deberá informar del error. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing | Máquina de Turing]].
 	- La semántica de los lenguajes de programación se pueden definir de dos formas.
 		- La *semántica estática* que se ocupa de las condiciones que debe cumplir las construcciones de un programa para que su significado sea correcto.
 		- La *semántica dinámica* que se ocupa del significado de una construcción con objeto de que puede ser traducido a código ejecutable.
