Se agrego mas cosas del libro de compiladores al resumen de autómatas

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
@@ -17,7 +17,7 @@ Un ***compilador*** es un programa que traduce un *programa fuente*, escrito en 
 
 ![[ALF-compiladores.png]]
 
-#### Estructura de un Compilador
+### Estructura de un Compilador
 
 Los compiladores constan de dos procesos o etapas principales: *la etapa de análisis y la etapa de síntesis*. La parte del análisis divide el programa fuente en componentes e impone una estructura gramatical sobre ellas. Después utiliza esta estructura para crear una representación intermedia del programa fuente. Si la parte del análisis detecta que el programa fuente está mal formado en cuanto a la sintaxis, o que no tiene una semántica inconsistente, entonces debe proporcionar mensajes de error para que el usuario pueda corregirlo. La parte del análisis también recolecta información sobre el programa fuente y la almacena en una estructura de datos llamada **tabla de símbolos**, esta estructura es rellenada y utiliza en todas las fases del compilador.
 La parte de la síntesis construye el programa objeto deseado a partir de la representación intermedia y de la información en la tabla de símbolos.
@@ -26,7 +26,7 @@ La parte de la síntesis construye el programa objeto deseado a partir de la rep
 
 - **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada que constituyen nuestro programa fuente y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
 - **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una representación intermedia (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
-- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. Una parte importante del análisis semántico es la verificación de tipos, en donde el compilador verifica que cada operador tenga operandos que coincidan, al mismo tiempo que guarda la información de los tipos en la tabla de símbolos, en caso de que no coincidan el compilador deberá informar del error. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing | Máquina de Turing]].
+- **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. Una parte importante del análisis semántico es la verificación de tipos, en donde el compilador verifica que cada operador tenga operandos que coincidan, al mismo tiempo que guarda la información de los tipos en la tabla de símbolos, en caso de que no coincidan el compilador deberá informar del error. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing#Máquina de Turing| Máquina de Turing]].
 	- La semántica de los lenguajes de programación se pueden definir de dos formas.
 		- La *semántica estática* que se ocupa de las condiciones que debe cumplir las construcciones de un programa para que su significado sea correcto.
 		- La *semántica dinámica* que se ocupa del significado de una construcción con objeto de que puede ser traducido a código ejecutable.
@@ -44,17 +44,21 @@ La parte de la síntesis construye el programa objeto deseado a partir de la rep
 >- $FS$ son las funciones semánticas asociadas a las reglas de producción de la gramática.
 >	- $exp ::= exp + exp \longrightarrow \{ exp_0.valor = exp_1.valor + exp_2.valor \}$
 
-- **Optimizador**: Trata de mejorar el código intermedio obtenido del análisis semántico, de modo que al momento de la traducción, resulte un código de máquina más rápido de ejecutar.
-- **Generador de Código Intermedio**: Es la fase final en donde se genera el código objeto, donde se toma la representación intermedia y se la traduce directamente a código ensamblador o a lenguaje máquina. Dicha representación interna puede tener diversas formas, puede llegar a tener código de tres direcciones, o secuencias de instrucciones similares a las de un ensamblador, con solo tres operandos por instrucciones. 
+>[!note] Representación interna y Generación de Código intermedio
+>En el proceso de traducción, un compilador puede construir una o más representaciones intermedias. Los árboles sintácticos son una forma de representación intermedia; por lo general, se utilizan durante el análisis sintáctico y semántico. Después del análisis semántico del programa fuente, muchos compiladores generan un ***código intermedia*** similar al código máquina, que podemos considerar como un programa para una máquina abstracta. Esta representación intermedia debe tener dos propiedades importantes: debe ser fácil de producir y fácil de traducir en la máquina destino.
 
->[!example] Información Adicional
->###### La Tabla de Símbolos
->No es más que una estructura de datos que contiene un registro o entrada por cada identificador que se encuentre en el código fuente, la principal función de esta tabla es almacenar los identificadores y los distintos atributos relacionados con estos.
->
->###### Detección e información de Errores
->En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general, en la etapa del análisis léxico y sintáctico es donde más se concentran los errores detectados por los compiladores.
->Por esta razón se dice que la mayoría de los compiladores son dirigidos por sintaxis, es decir, el proceso de traducción es dirigido por el analizador léxico y sintáctico, en el cual se comienza a generar la estructura del programa fuente a través de los tokens y se proporciona el significado del programa basándose en la estructura de árbol de análisis sintáctico.
->Típicamente los compiladores realizan una pasada para realizar el análisis léxico y sintáctico, otra para el análisis semántico y la optimización, y una última pasada para generar el código objeto.
+- **Optimizador**: Trata de mejorar el código intermedio obtenido del análisis semántico, de modo que al momento de la traducción, resulte un código de máquina más rápido de ejecutar.
+- **Generador de Código**: Es la fase final en donde se genera el código objeto, donde se toma la representación intermedia y se la traduce directamente a código ensamblador o a lenguaje máquina. Dicha representación interna puede tener diversas formas, puede llegar a tener código de tres direcciones, o secuencias de instrucciones similares a las de un ensamblador, con solo tres operandos por instrucciones. 
+
+#### La Tabla de Símbolos
+
+No es más que una estructura de datos que contiene un registro o entrada por cada identificador que se encuentre en el código fuente, la principal función de esta tabla es almacenar los identificadores y los distintos atributos relacionados con estos.
+
+#### Detección e información de Errores
+
+En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general, en la etapa del análisis léxico y sintáctico es donde más se concentran los errores detectados por los compiladores.
+Por esta razón se dice que la mayoría de los compiladores son dirigidos por sintaxis, ya que la mayoría de los errores son detectados en el análisis sintáctico y semántico.
+Típicamente, los compiladores realizan una pasada para realizar el análisis léxico y sintáctico, otra para el análisis semántico y la optimización, y una última pasada para generar el código objeto.
 
 ## Intérpretes
 
